fix: the input box doesn't align with the right text because of the line-height (#71)
* fix(form): extra text choice style

* fix: the input box doesn't align with the right text because of the line-height

--- a/demo/supa-form/src/global.css
+++ b/demo/supa-form/src/global.css
@@ -14,9 +14,7 @@
 input,
 input[type='text'],
 input[type='email'] {
-    @apply border-b-gray-400 focus:border-gray-400 appearance-none bg-transparent leading-[1.48] text-[0.72em] font-black ml-0 mr-[0.6em] my-0 px-[0.2em] py-[0.16em] rounded-none border-0 border-b border-solid outline-none;
     -webkit-appearance: none;
     -moz-appearance: none;
-    outline: 0;
     --tw-ring-shadow: 0 0 #000 !important;
 }
